[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "medical-deep-research"
version = "0.1.0"
description = "Physician-grade multi-agent medical literature review using Google ADK + Vertex AI"
authors = ["Code Kaleidoscope / StructureBot PBC"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core ADK framework
google-adk = ">=1.0.0"

# Vertex AI for deployment
google-cloud-aiplatform = {version = ">=1.95.0", extras = ["adk", "agent_engines"]}

# HTTP client for PubMed/FDA API calls
httpx = ">=0.27.0"

# Data validation (tool schemas + structured outputs)
pydantic = ">=2.0.0"

# Google GenAI SDK (Gemini models)
google-genai = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
# Local development server
uvicorn = ">=0.30.0"
fastapi = ">=0.111.0"

# Testing
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-httpx = ">=0.30.0"

# Type checking
mypy = ">=1.10.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["eval"]
